--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script type="module" src="/src/main.tsx"></script>
   <script src="/js/jquery-3.3.1.min.js"></script>
   <script src="/js/bootstrap.bundle.min.js"></script>
+  <script src="./public/js/main.js"></script>
 
 
 
