--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="/js/jquery-3.3.1.min.js"></script>
   <script src="/js/bootstrap.bundle.min.js"></script>
   <script src="./public/js/main.js"></script>
+  <script src="./public/js/jquery-3.3.1.min.js"></script>
 
 
 
